@@ -1,7 +1,6 @@
 ## Emacs, make this -*- mode: sh; -*-
 
 FROM r-base:latest
-#FROM rocker/r-base:4.0.0
 
 LABEL org.label-schema.license="GPL-2.0" \
       org.label-schema.vcs-url="https://github.com/RcppCore/Rcpp" \
@@ -15,13 +14,6 @@ RUN apt-get update \
                 r-cran-pkgkitten \
                 git \
         && install.r covr rbenchmark tinytest
-
-#RUN apt-get update \
-#    && apt-get install -y --no-install-recommends \
-#               libcurl4-openssl-dev \
-#               libssl-dev \
-#               git \
-#    && install.r covr inline pkgKitten rbenchmark tinytest
 
 ENV _R_CHECK_FORCE_SUGGESTS_ FALSE
 ENV _R_CHECK_TESTS_NLINES_ 0
