@@ -1,3 +1,7 @@
+2021-11-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* docker/ci/Dockerfile: Minor cleanup
+
 2021-11-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/RcppLdpath.R: Simplified as we no longer need to worry about CXX0X
